--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -113,7 +113,7 @@ All experimental photobleaching curves were well-fitted by a mono-exponential de
 %% REMOVE?
 \begin{suppfigure*}[htbp]
 \begin{center}
-\includegraphics[width=\textwidth]{SI_Figures/Cells_1spot.pdf}
+% \includegraphics[width=\textwidth]{SI_Figures/Cells_1spot.pdf}
 \end{center}
 \caption{Proportion of cells that contain at least one RecB spot. Bars represent averages and black dots individual datasets.}
 \label{SIFig:cells_1spot}
