Fix underfull hboxes

--- a/Article.tex
+++ b/Article.tex
@@ -4,6 +4,7 @@
 \graphicspath{{Figures/}{SI_Figures/}}
 \usepackage{newfloat}
 \DeclareFloatingEnvironment[name={Supplementary Figure}]{suppfigure}
+\usepackage{microtype}
 
 \newcommand{\dreca}{$\Delta$recA} % ΔrecA
 \newcommand{\teneighty}{RecB$_{1080}$} % RecB1080
