--- a/Results.tex
+++ b/Results.tex
@@ -14,17 +14,16 @@
 %% Explain what we are trying to do (detect RecB binding to DNA)
 %% Mention that bacteria experience endogenous damage
 %% Explain the experiment principle, conclude with the fact that we are detecting RecB spots (SI control: no spots on the free Halo images)
-To image RecBCD in live \textit{E. coli}, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:endogenous}A). The fusion was previously used and characterised in the lab, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process.\cite{Lepore2019} To detect the binding of RecB to DNA, we applied the previously developed technique of XXX (check name in Elf article).\cite{Elf2007}  Since RecB is present at low copy numbers in \textit{E. coli} ($\sim$5 molecules per cell on average\cite{Lepore2019}), imaging live cells with a long exposure time (1 second) made diffusing molecules appear as weak homogeneous signal in the cell, while DNA-bound molecules formed intense diffraction-limited spots (referred to throughout this article as RecB spots). (Figures \ref{Fig:endogenous}A, B) The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these structures were specific to RecB (Supp. Fig. \ref{SIFig:freehalo_image}). Seeing RecB spots in cells that were not exposed to an exogenous source of DNA damage was unsurprising, as these cells are still subject to occasional endogenous DNA damage. This can be due for example to collisions between the replication fork and DNA-bound proteins, and was previously reported to affect $\sim$20\% of cells per cell cycle. (ref Leach)
+To image Rec\-BCD in live \textit{E. coli}, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:endogenous}A). The fusion was previously used and characterised in the lab, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process.\cite{Lepore2019} To detect the binding of RecB to DNA, we applied the previously developed technique of XXX (check name in Elf article).\cite{Elf2007}  Since RecB is present at low copy numbers in \textit{E. coli} ($\sim$5 molecules per cell on average\cite{Lepore2019}), imaging live cells with a long exposure time (1 second) made diffusing molecules appear as weak homogeneous signal in the cell, while DNA-bound molecules formed intense diffraction-limited spots (referred to throughout this article as RecB spots). (Figures \ref{Fig:endogenous}A, B) The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these structures were specific to RecB (Supp. Fig. \ref{SIFig:freehalo_image}). Seeing RecB spots in cells that were not exposed to an exogenous source of DNA damage was unsurprising, as these cells are still subject to occasional endogenous DNA damage. This can be due for example to collisions between the replication fork and DNA-bound proteins, and was previously reported to affect $\sim$20\% of cells per cell cycle. (ref Leach)
 
 Acquiring short timelapse videos (50 images over 100 seconds, Figure \ref{Fig:endogenous}C) allowed us to measure the binding time of RecB on DNA (Figure \ref{Fig:endogenous}D). The average lifetime of RecB spots in our experiment was 4.4 s $\pm$ 0.29. This prolonged imaging of the RecB-Halo fusion and quantification of DNA binding times was only possible thanks to the exceptional photostability of the JF549 dye, which displayed slow photobleaching and no blinking (Supp. Note \ref{note:dye_bleaching} and Supp. Fig. \ref{SIFig:dye_bleaching}). 
 
 %% RecA makes foci and filaments
-\subsubsection*{RecA occasionally forms foci and filaments}
-One of RecBCD's purposes when processing a DSB is to facilitate the loading of the RecA protein on single-stranded DNA. To broaden our view of the repair process downstream of RecBCD, we imaged a tandem fusion of RecA with the fluorescent protein SYFP2.\cite{} Based on the fluorescence distribution in the cells, we identified three states of RecA: diffuse, forming a bright focus, or forming an elongated filament. (Figure \ref{Fig:endogenous}E) Because of the large diversity of shapes observed, especially for RecA filaments, the detection of RecA structures by rule-based algorithms was challenging. Therefore, we designed and trained a deep-learning algorithm capable of classifying individual cells based on the three types of structures cited above. (see Methods and Supp. Figure \ref{SIFig:objectClassifier}) This allowed us to quantify the fraction of cells where RecA is freely diffusing to 81\% $\pm$ 6, RecA foci to 10\% $\pm$ 4, and RecA filaments to 9\% $\pm$ 2 (Figure \ref{Fig:endogenous}F). This is consistent with a minority of cells experiencing DNA damage, and being engaged in the repair process.
-
+\subsubsection*{RecA forms foci and filaments}
+One of RecBCD's purposes when processing a DSB is to facilitate the loading of the RecA protein on single-stranded DNA. To broaden our view of the repair process downstream of RecBCD, we imaged a tandem fusion of RecA with the fluorescent protein SYFP2.\cite{} Based on the fluorescence distribution in the cells, we identified three states of RecA: diffuse, forming a bright focus, or forming an elongated filament (Figure \ref{Fig:endogenous}E). Because of the large diversity of shapes observed, especially for RecA filaments, the detection of RecA structures by rule-based algorithms was challenging. Therefore, we designed and trained a deep-learning algorithm capable of classifying individual cells based on the three types of structures cited above (see Methods and Supp. Figure \ref{SIFig:objectClassifier}). This allowed us to quantify the fraction of cells where RecA is freely diffusing to 81\% $\pm$ 6, RecA foci to 10\% $\pm$ 4, and RecA filaments to 9\% $\pm$ 2 (Figure \ref{Fig:endogenous}F). This is consistent with a minority of cells experiencing DNA damage, and being engaged in the repair process.
 
 % Part 2: Separating genuine RecB binding events
-\subsection*{Separating genuine DNA binding events from spurious spots}
+\subsection*{Isolating genuine DNA binding events}
 
 \begin{figure*}[htbp]
 \begin{center}
@@ -84,7 +83,7 @@ To assess whether the fitted RecB binding times were influenced by our sampling 
 
 %% At high cipro (above MIC, 20-30 ng/mL) we see a strong accumulation of RecB spots in the cell (add panel or SI Fig with proportion of cells that have a spot)
 %% Moreover these spots are centred in the cell (consistent with SOS/RecN-induced chromosome compaction)
-Upon exposure to the higher ciprofloxacin concentrations (20 and 30 ng/mL), the proportion of cells that contain at least one RecB spot increased (Supp. Figure \ref{SIFig:cells_1spot}). This hints at an accumulation of repair intermediates in cells that are exposed to large amounts of DNA damage. Furthermore, whereas at low ciprofloxacin concentrations (0, 3, 10 ng/mL) RecB spots were found throughout the cell, at higher concentrations they appeared more centred in the cell (Figure \ref{Fig:high_cipro}A). This is consistent with RecN-dependent, SOS-induced compaction of the bacterial chromosome upon DNA damage, as has been previously reported (cite RecN paper).
+Upon exposure to the higher cipro\-floxacin concentrations (20 and 30 ng/mL), the proportion of cells that contain at least one RecB spot increased (Supp. Figure \ref{SIFig:cells_1spot}). This hints at an accumulation of repair intermediates in cells that are exposed to large amounts of DNA damage. Furthermore, whereas at low ciprofloxacin concentrations (0, 3, 10 ng/mL) RecB spots were found throughout the cell, at higher concentrations they appeared more centred in the cell (Figure \ref{Fig:high_cipro}A). This is consistent with RecN-dependent, SOS-induced compaction of the bacterial chromosome upon DNA damage, as has been previously reported (cite RecN paper).
 
 %% We also see a strong accumulation of RecA filaments (RecA foci seem to be transient and their number decreases over time)
 Simultaneously with the increase in the number of RecB spots, RecA filaments became visible in a large number of cells (Figure \ref{Fig:high_cipro}B). After one hour of exposure to ciprofloxacin, the proportion of cells that contained a RecA filament was $\sim$40\% at 20 ng/mL ciprofloxacin, and $\sim$60\% at 30 ng/mL (Figure \ref{Fig:high_cipro}C). RecA foci on the other hand seemed to form quickly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/mL ciprofloxacin) and come back to endogenous damage level after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments do accumulate, presumably when the homologous sequence cannot be found.
@@ -96,7 +95,7 @@ In these experiments, we can observe two regimes of DNA repair after ciprofloxac
 
 
 % Part 5: Mutants in the repair pathway
-\subsection*{RecB dissociation depends on RecA loading and RecB's nuclease activity}
+\subsection*{RecB dissociation depends on RecA loading}
 
 \begin{figure*}[htbp]
 \begin{center}
