--- a/Notebooks/3_Mutants/RecB_dissociation.ipynb
+++ b/Notebooks/3_Mutants/RecB_dissociation.ipynb
@@ -981,11 +981,11 @@
     "      .bin_column(object_name='RecB_spots', col='Time_min', binsize=20, binlabels='left')\n",
     "      .set_type(object_name='RecB_spots', type_dict={'Time_min_bin':'int'})\n",
     "      .RecB_spots\n",
-    "      .query('Time_min_bin < 95 and Cipro == \"30 ng/mL\" and TrackLength >= 8')\n",
+    "      .query('Time_min_bin < 95 and Cipro == \"30 ng/mL\" and TrackLength >= 5')\n",
     "      )\n",
     "\n",
     "# Initialize the FacetGrid object\n",
-    "pal = sns.cubehelix_palette(4, rot=-.25, light=.7, dark=.2)\n",
+    "pal = sns.cubehelix_palette(5)\n",
     "g = sns.FacetGrid(df, row=\"Time_min_bin\", col='Group', hue=\"Time_min_bin\", aspect=6, height=.5, palette=pal)\n",
     "\n",
     "# Draw the densities in a few steps\n",
