Test commit from DanielsPC

--- a/Notebooks/3_Mutants/RecB_dissociation.ipynb
+++ b/Notebooks/3_Mutants/RecB_dissociation.ipynb
@@ -985,8 +985,7 @@
     "      )\n",
     "\n",
     "# Initialize the FacetGrid object\n",
-    "pal = sns.cubehelix_palette(5)\n",
-    "g = sns.FacetGrid(df, row=\"Time_min_bin\", col='Group', hue=\"Time_min_bin\", aspect=6, height=.5, palette=pal)\n",
+    "g = sns.FacetGrid(df, row=\"Time_min_bin\", col='Group', hue=\"Time_min_bin\", aspect=6, height=.5, palette=sns.color_palette('flare'))\n",
     "\n",
     "# Draw the densities in a few steps\n",
     "g.map(sns.kdeplot, \"midCellDist\",\n",
@@ -997,13 +996,11 @@
     "# passing color=None to refline() uses the hue mapping\n",
     "g.refline(y=0, linewidth=2, linestyle=\"-\", color=None, clip_on=False)\n",
     "\n",
-    "\n",
     "# Define and use a simple function to label the plot in axes coordinates\n",
     "def label(x, color, label):\n",
     "    ax = plt.gca()\n",
     "    ax.text(0, .2, label, fontweight=\"bold\", color=color,\n",
     "            ha=\"left\", va=\"center\", transform=ax.transAxes)\n",
-    "\n",
     "\n",
     "g.map(label, \"midCellDist\")\n",
     "\n",
