--- a/Results.tex
+++ b/Results.tex
@@ -29,7 +29,7 @@ One of RecBCD's purposes when processing a DSB is to facilitate the loading of t
 \begin{center}
 \includegraphics[width=\textwidth]{Fig2_cipro_nSpots.pdf}
 \end{center}
-\caption{RecB DNA binding under ciprofloxacin exposure. (A) Scheme of cell exposure to ciprofloxacin. The cells are added to a ciprofloxacin-containing agar-pad, and left to settle for 15 min before imaging. (B) Example images of RecB throughout an acquisition. A short timelapse (100 sec) is acquired at a different position every 2 min for 75 min. (C) Number of RecB spots per cell area, at 0 and 30 ng/mL ciprofloxacin (panels) in cells expressing the Gam protein, or not (WT) (D) RecB spot lifetime histograms at 30 ng/mL ciprofloxacin, fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). (E) Number of RecB spots per cell area, as a function of ciprofloxacin concentration (panels) and exposure time to the antibiotic (X-axis). Black dots represent measurements from individual datasets, and solid bars are the average between them.}
+\caption{RecB DNA binding under ciprofloxacin exposure. (A) Example images of RecB throughout an acquisition. A short timelapse (100 sec) is acquired at a different position every 2 min for 75 min. (C) Number of RecB spots per cell area, at 0 and 30 ng/mL ciprofloxacin (panels) in cells expressing the Gam protein, or not (WT) (D) RecB spot lifetime histograms at 30 ng/mL ciprofloxacin, fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). (E) Number of RecB spots per cell area, as a function of ciprofloxacin concentration (panels) and exposure time to the antibiotic (X-axis). Black dots represent measurements from individual datasets, and solid bars are the average between them.}
 \label{Fig:nspots}
 \end{figure*}
 
