Added refs to results part 1

--- a/Article.tex
+++ b/Article.tex
@@ -1,10 +1,8 @@
 \documentclass[times, twoside]{zHenriquesLab-StyleBioRxiv}
 
-\usepackage{graphicx}
-\graphicspath{{Figures/}{SI_Figures/}}
 \usepackage{newfloat}
 \DeclareFloatingEnvironment[name={Supplementary Figure}]{suppfigure}
-\usepackage{microtype}
+%\usepackage{microtype}
 
 \newcommand{\dreca}{$\Delta$recA} % ΔrecA
 \newcommand{\teneighty}{RecB$_{1080}$} % RecB1080
@@ -58,7 +56,7 @@ Acknowledgements
 \end{acknowledgements}
 
 \section*{Bibliography}
-\bibliography{bibliography}
+\bibliography{Bibliography}
 
 \onecolumn
 \newpage
